# Sonder_Engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Design.md  Makefile  README.md  Start Sonder.bat  affect.py  app.py  character_schema.py  checkpoints.py  commit.py  db.py  frames.py  greetings.py  guest_access.py  importers.py  llm_quality.py  logging_utils.py  memory.py  paradox.py  pipeline_context.py  prompt_cache.py  prompts.py  providers.py  pyproject.toml  requirements.txt  scene.py  schemas.py  spatial.py  spatial_frames.py  theory_of_mind.py  updates.py
agents/: README.md  __init__.py  background.py  character.py  common.py  director.py  loops.py  mapping.py  narration.py  perception.py  runtime.py  storage.py
demo/: .gitignore  AUDIT_FINDINGS.md  README.md  coverage.md  transcript.md
docs/: ARCHITECTURE_AUDIT_2026-07-19.md  AUDIT_FOLLOWUPS.md  CODE_MAP.md  DATABASE.md  EXTENSIONS_DESIGN.md  PIPELINE.md  README.md  RESEARCH.md
static/: guest.html  index.html  login.html  styles.css
tests/: README.md  conftest.py  test_ability_isolation.py  test_addressed_to_priority.py  test_affect.py  test_agent_package.py  test_app_imports.py  test_authorial_channel.py  test_awareness.py  test_background_character_reply.py  test_background_ensemble.py  test_background_event_persistence.py  test_background_presence_tracking.py  test_background_react.py  test_branching_integrity.py  test_character_memory_import_export.py  test_character_promotion.py  test_character_schema.py  test_character_self_knowledge.py  test_chat_char_frames.py  test_chat_export_import_frames.py  (+90 more)
(+24 files in other folders)
